<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent"
    tools:context=".SelectOptionAuthActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/taxi"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/seleccione_una_opcion"
            android:textAlignment="center"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
        <Button
            android:id="@+id/btn_iniciar_sesion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorWhite"
            android:background="@drawable/button_redonded"
            android:backgroundTint="@color/colorPrimary"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/iniciar_sesion"/>
        <Button
            android:id="@+id/btn_registrarme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button_redonded"
            android:backgroundTint="@color/colorWhite"
            android:layout_marginTop="10dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/registrarme"/>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>