<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/taxi"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/banner"
            android:textAlignment="center"
            android:layout_margin="40dp"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="40dp"
            android:gravity="bottom">

            <Button
                android:id="@+id/soy_conductor"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:textColor="@color/colorWhite"
                android:background="@drawable/button_redonded"
                android:backgroundTint="@color/colorPrimary"
                android:layout_marginEnd="5dp"
                android:text="@string/conductor"/>
            <Button
                android:id="@+id/soy_cliente"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/button_redonded"
                android:backgroundTint="@color/colorWhite"
                android:layout_marginStart="5dp"
                android:text="@string/cliente"/>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>