<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorAccent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <include layout="@layout/action_bar_toolbar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginTop="75dp"
               android:src="@drawable/pass"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_marginTop="60dp"
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/nombre"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/nombres"
                   android:inputType="text"
                   >

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginTop="20dp"
               android:src="@drawable/email"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/correo"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/correo"
                   android:inputType="textEmailAddress"
                   >

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>
       </LinearLayout>

       <LinearLayout
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="15dp"
           android:orientation="horizontal">

           <ImageView
               android:layout_width="20dp"
               android:layout_height="20dp"
               android:layout_marginTop="20dp"
               android:src="@drawable/user"/>
           <com.google.android.material.textfield.TextInputLayout
               android:layout_width="match_parent"
               android:layout_height="wrap_content">

               <com.google.android.material.textfield.TextInputEditText
                   android:id="@+id/clave"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:hint="@string/clave"
                   android:inputType="textPassword"
                   >

               </com.google.android.material.textfield.TextInputEditText>
           </com.google.android.material.textfield.TextInputLayout>
       </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:gravity="bottom"
            android:layout_margin="40dp"
            android:layout_height="match_parent">
            <Button
                android:id="@+id/registrar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registrarme"
                android:background="@drawable/button_redonded"
                android:backgroundTint="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>